# rize

./: .env  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  setup.sql  tsconfig.json
backend/rize/: .env  Cargo.toml
backend/rize/src/: auth.rs  db.rs  main.rs
backend/rize/tests/: login.rs  user_login.rs
migrations/: 20240305182316_reservation.down.sql  20240305182316_reservation.up.sql  20240410100000_add_search_fields.down.sql  20240410100000_add_search_fields.up.sql  20240411120000_create_users_table.up.sql
src/: auth.rs  lib.rs  main.rs  user_profile.rs  user_profile.sql
tests/: api.rs  login_api_tests.rs  user_profile.rs
typescript/: App.css  UserProfileManagement.test.tsx  user-routes.test.ts  user-routes.ts
user_auth_api/: Cargo.toml
user_auth_api/src/: config.rs  db.rs  lib.rs  main.rs  schema.rs
