[package]
name = "rize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
lazy_static = "1.4.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
