[package]
name = "rize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
bcrypt = "0.15.0"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
