[package]
name = "rize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "uuid"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
