[package]
name = "user_auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
serde = "1.0.196"
serde_derive = "1.0.196"
sqlx = { version = "0.7.3", features = ["postgres"] }

[[bin]]
name = "user_auth_api"
path = "src/main.rs"
