[package]
name = "rize_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.10"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
uuid = "0.8"
